--- a/examples/project.defx/project.json
+++ b/examples/project.defx/project.json
@@ -1,9 +1,9 @@
 {
   "schema_version": "2.0",
   "meta": {
-    "name": "MVP_Camera_Path",
+    "name": "Rail_AimSpring_Bezier",
     "fps": 24,
-    "frames": 120,
+    "frames": 180,
     "resolution": [
       576,
       1024
@@ -11,78 +11,161 @@
   },
   "assets": {},
   "timeline": {
+    "objects": {
+      "nulls": {
+        "hero": {
+          "type": "Null",
+          "position": [
+            0.0,
+            1.5,
+            0.0
+          ]
+        },
+        "poi": {
+          "type": "Null",
+          "position": [
+            2.0,
+            1.3,
+            -1.0
+          ]
+        }
+      },
+      "splines": {
+        "dolly_spline_A": {
+          "type": "CatmullRomSpline",
+          "closed": false,
+          "points": [
+            [
+              -3.0,
+              1.8,
+              -7.0
+            ],
+            [
+              -1.5,
+              1.6,
+              -5.0
+            ],
+            [
+              0.0,
+              1.5,
+              -3.3
+            ],
+            [
+              1.2,
+              1.55,
+              -2.6
+            ],
+            [
+              2.4,
+              1.65,
+              -3.2
+            ],
+            [
+              3.0,
+              1.8,
+              -5.2
+            ]
+          ]
+        },
+        "bezier_path_B": {
+          "type": "BezierSpline",
+          "segments": [
+            {
+              "p0": [
+                -3.0,
+                1.8,
+                -7.0
+              ],
+              "p1": [
+                -2.4,
+                1.6,
+                -6.2
+              ],
+              "p2": [
+                -1.6,
+                1.6,
+                -5.2
+              ],
+              "p3": [
+                -0.5,
+                1.5,
+                -4.2
+              ]
+            },
+            {
+              "p0": [
+                -0.5,
+                1.5,
+                -4.2
+              ],
+              "p1": [
+                0.6,
+                1.45,
+                -3.2
+              ],
+              "p2": [
+                1.8,
+                1.65,
+                -3.4
+              ],
+              "p3": [
+                3.0,
+                1.8,
+                -5.2
+              ]
+            }
+          ]
+        }
+      }
+    },
     "tracks": [
       {
         "id": "camera.transform",
         "type": "CameraTransformTrack",
         "channels": {
-          "position.x": {
+          "rail.u": {
             "keys": [
               {
                 "t": 0,
                 "v": 0.0,
                 "interp": "bezier",
                 "out_tan": [
-                  0.33,
+                  0.2,
                   0.0
                 ]
               },
               {
-                "t": 60,
-                "v": 2.0,
+                "t": 120,
+                "v": 1.0,
                 "interp": "bezier",
                 "in_tan": [
-                  -0.33,
+                  -0.2,
                   0.0
                 ]
-              },
-              {
-                "t": 119,
-                "v": 0.0,
-                "interp": "bezier"
-              }
-            ]
-          },
-          "position.y": {
-            "keys": [
-              {
-                "t": 0,
-                "v": 1.5,
-                "interp": "linear"
-              },
-              {
-                "t": 119,
-                "v": 1.7,
-                "interp": "linear"
-              }
-            ]
-          },
-          "position.z": {
-            "keys": [
-              {
-                "t": 0,
-                "v": -6.0,
-                "interp": "catmull_rom"
-              },
-              {
-                "t": 40,
-                "v": -3.5,
-                "interp": "catmull_rom"
-              },
-              {
-                "t": 80,
-                "v": -2.5,
-                "interp": "catmull_rom"
-              },
-              {
-                "t": 119,
-                "v": -5.0,
-                "interp": "catmull_rom"
               }
             ]
           },
           "target.x": {
-            "value": 0.0
+            "keys": [
+              {
+                "t": 0,
+                "v": 0.0,
+                "interp": "bezier",
+                "out_tan": [
+                  0.3,
+                  0.0
+                ]
+              },
+              {
+                "t": 179,
+                "v": 1.2,
+                "interp": "bezier",
+                "in_tan": [
+                  -0.3,
+                  0.0
+                ]
+              }
+            ]
           },
           "target.y": {
             "value": 1.5
@@ -94,33 +177,169 @@
             "keys": [
               {
                 "t": 0,
-                "v": 35,
+                "v": 28,
+                "interp": "bezier",
+                "out_tan": [
+                  0.3,
+                  3.0
+                ]
+              },
+              {
+                "t": 179,
+                "v": 55,
+                "interp": "bezier",
+                "in_tan": [
+                  -0.3,
+                  -3.0
+                ]
+              }
+            ]
+          },
+          "orbit.radius": {
+            "value": 5.2
+          },
+          "orbit.azimuth_deg": {
+            "keys": [
+              {
+                "t": 0,
+                "v": -20,
                 "interp": "bezier"
               },
               {
-                "t": 119,
-                "v": 50,
+                "t": 179,
+                "v": 35,
+                "interp": "bezier"
+              }
+            ]
+          },
+          "orbit.elevation_deg": {
+            "value": 12.0
+          },
+          "path.u": {
+            "keys": [
+              {
+                "t": 0,
+                "v": 0.0,
+                "interp": "bezier"
+              },
+              {
+                "t": 179,
+                "v": 1.0,
                 "interp": "bezier"
               }
             ]
           }
         },
-        "constraints": [],
-        "modifiers": []
+        "constraints": [
+          {
+            "type": "FollowPath",
+            "order": 0,
+            "enabled": true,
+            "params": {
+              "spline_id": "bezier_path_B",
+              "offset": [
+                0,
+                0,
+                0
+              ]
+            }
+          },
+          {
+            "type": "Rail",
+            "order": 0,
+            "enabled": false,
+            "params": {
+              "spline_id": "dolly_spline_A",
+              "offset": [
+                0,
+                0,
+                0
+              ]
+            }
+          },
+          {
+            "type": "LookAtObject",
+            "order": 5,
+            "enabled": true,
+            "params": {
+              "null_id": "hero"
+            }
+          },
+          {
+            "type": "Orbit",
+            "order": 20,
+            "enabled": false,
+            "params": {
+              "radius": 6.0,
+              "azimuth_deg": 0.0,
+              "elevation_deg": 10.0,
+              "offset": [
+                0,
+                0,
+                0
+              ]
+            }
+          }
+        ],
+        "modifiers": [
+          {
+            "type": "AimSpring",
+            "order": 0,
+            "params": {
+              "stiffness": 18.0,
+              "damping": 6.0
+            },
+            "enabled": true
+          },
+          {
+            "type": "NoiseShake",
+            "order": 10,
+            "params": {
+              "seed": 42,
+              "amp_pos": 0.03,
+              "amp_tgt": 0.015,
+              "freq_hz": 5.5
+            },
+            "enabled": true
+          },
+          {
+            "type": "DollyZoom",
+            "order": 20,
+            "params": {
+              "reference_focal_mm": 35.0,
+              "reference_distance_m": 3.2,
+              "min_focal_mm": 18.0,
+              "max_focal_mm": 120.0
+            },
+            "enabled": true
+          },
+          {
+            "type": "HorizonLock",
+            "order": 30,
+            "enabled": true,
+            "params": {}
+          }
+        ]
       }
     ],
-    "objects": {
-      "nulls": {
-        "hero": {
-          "type": "Null",
-          "position": [
-            0,
-            1.5,
-            0
-          ]
-        }
+    "markers": [
+      {
+        "frame": 0,
+        "label": "intro"
+      },
+      {
+        "frame": 48,
+        "label": "beat_1"
+      },
+      {
+        "frame": 96,
+        "label": "beat_2"
+      },
+      {
+        "frame": 144,
+        "label": "climax"
       }
-    }
+    ]
   },
   "render": {
     "backend": "headless",
